# squakey

./: .editorconfig  Cargo.toml  build.rs  readme.md  style.md
.github/workflows/: ci.yaml
src/: ast.rs  config.rs  format_utils.rs  grammar.rs  lib.rs  main.rs  parse_util.rs  parser.rs  quakec.pest  serializer.rs
test_files/: defs.qc  door_secret2.qc  knight.qc  readme.md
tests/: test_template
tests/data/assignment/: expected.qc  input.qc
tests/data/basic_arithmetic/: expected.qc  input.qc
tests/data/basic_comments/: expected.qc  input.qc
tests/data/block_comments/: expected.qc  input.qc
tests/data/block_newlines/: expected.qc  input.qc
tests/data/comments_and_declarations/: expected.qc  input.qc
tests/data/comments_in_blocks/: expected.qc  input.qc
tests/data/complex_arithmetic/: expected.qc  input.qc
tests/data/complex_logic/: expected.qc  input.qc
tests/data/extraneous_newline/: expected.qc  input.qc
tests/data/extraneous_newline_2/: expected.qc  input.qc
tests/data/field_access/: expected.qc  input.qc
tests/data/fields/: expected.qc  input.qc
tests/data/fields_definition/: expected.qc  input.qc
tests/data/function_calls/: expected.qc  input.qc
tests/data/function_declaration/: expected.qc  input.qc
tests/data/function_definition/: expected.qc  input.qc
tests/data/if/: expected.qc  input.qc
tests/data/lte_gte/: expected.qc  input.qc
tests/data/modelgen_macros/: expected.qc  input.qc
tests/data/switch/: expected.qc  input.qc
tests/data/twocomment/: expected.qc  input.qc
tests/data/while/: expected.qc  input.qc
