[package]
name = "squakey"
version = "0.1.0"
edition = "2018"

[lib]
name = "squakey"
path = "src/lib.rs"

[[bin]]
name = "squake_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
pest = "2.1.3"
pest_derive = "2.1.0"
pretty_assertions = "0.7.2"
